2007-07-15  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.12.defs: strip gtk_ prefix for new functions.

2007-07-14  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/__init__.py: try/except around ltihooks.uninstall(),
	as suggested by Brad Schick at the pygtk mailing list

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	reviewed by: Johan, Fix bug #371293
	
	* gtk/gtk-base.defs:
	(gtk_image_new_from_file)
	(gtk_image_new_from_pixbuf)
	(gtk_image_new_from_pixmap)
	(gtk_image_new_from_image): Add wrappers.

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	reviewed by: Johan, Fix bug #456037
	
	* gtk/gtktreeview.override:
	(gtk_tree_view_convert_widget_to_bin_window_coords)
	(gtk_tree_view_convert_widget_to_tree_coords)
	(gtk_tree_view_convert_tree_to_widget_coords)
	(gtk_tree_view_convert_tree_to_bin_window_coords)
	(gtk_tree_view_convert_bin_window_to_widget_coords)
	(gtk_tree_view_convert_bin_window_to_tree_coords): Add wrappers.

2007-07-11  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.in: fix a broken build if gtk+-2.12 is not present,
	patch from Sébastien Granjoux.

2007-07-11  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/reversewrapper.py: Fix premature return of virtual
	methods containing GError** parameters.  Based on patch by
	Sébastien Granjoux.  Closes #455629.

2007-07-11  Gian Mario Tagliaretti  <gianmt@gnome.org>
	
	reviewed by: Johan
	
	* configure.in: bump version to 2.11.0, bump pango required version
	to 1.16.0, bump atk version to 1.12.0. Conditional build for gtk/gdk
	2.12 API.

	* pango-types.defs,
	* pango.defs,
	* pangocairo.defs: update with API up to 1.16.
	
	* atk-types.defs,
	* atk.defs: update with API up to 1.12.
	
	* gtk/Makefile.am: conditional build for new API 2.12.
	
	* gtk/gtk-2.12-types.defs,
	* gtk/gtk-2.12.defs,
	* gtk/gdk-2.12.defs: new files holding 2.12 API.
	
	* gtk/gtkunixprint.defs: update with API 2.12.

2007-07-10  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
