@@ -106,6 +106,7 @@ pygtk_util_pyobject_as_double(PyObject *obj, gdouble *value, const char *argumen
 
 %%
 include 
+  gtkbuilder.override
   gtkclist.override
   gtkcontainer.override
   gtkctree.override
