@@ -1,3 +1,14 @@
+2007-07-17  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	reviewed by: Johan, Fix bug #4457195
+
+	* gtk/gtkbuilder.override: new file.
+
+	* gtk/Makefile.am,
+	* gtk/gtk.override: add gtkbuilder.override.
+
+	* examples/builder/*: add new builder example.
+
 2007-07-15  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* gtk/gtk-2.12.defs: strip gtk_ prefix for new functions.
